--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <div class="ai-chat-box">
     <img src="ai.png" alt="" id="aiImage" width="10%">
     <div class="ai-chat-area">
-        🤕வா அருணாச்சலம் நீ இங்க தான் வருவான்னு தெறியும் !!
+        Ask anything to me !!
     </div>
    
 </div>
     </div>
     <div class="prompt-area">
-<input type="text" id="prompt" placeholder="அரம்பிகளமா....">
+<input type="text" id="prompt" placeholder="Type Here....">
 <button id="image"><img src="img.svg" alt="">
 <input type="file" accept="images/*" hidden></button>
 <button id="submit"><img src="submit.svg" alt=""></button>
